

public class CacheString
{
    public const string StateIlde = "Idle";
    public const string StateRun = "Run";
    public const string StateAttack = "Attack";
    public const string StateDance = "Dance";
    public const string StateDead = "Dead";
    public const string DataWeaponsAddress = "Data1";
    public const string DataHatAddress = "Data1";
    public const string DataPantAddress = "Data1";
    public const string DataColorAddress = "Data1";
}
